--- a/osszefoglalok/tortenelem.html
+++ b/osszefoglalok/tortenelem.html
@@ -30,6 +30,9 @@
         <div class="text-center">
             <h1 id="mh1">Történelem</h1>
         </div>
+        <p class="alert alert-warning" role="alert">
+            Az összefoglalók kikerülésének módja hamarosan megváltozik. További információért kattints&nbsp;<span style="text-decoration: underline;" onclick="window.open('https://github.com/Pntrmln/pntrmln.github.io/blob/main/README.md')"> ide</span>.
+        </p>
         <section class="mt-5 text-center" id="fsect">
             <div class="dropdown">
                 <h4 id="jtnh4" onclick="showDropdown('jtn')">Jelenlegi tanév:<i class="fa-solid fa-caret-down"></i></h4>
@@ -58,24 +61,12 @@
                 </div>
             </div>
         </section>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2657039667172408"
-        crossorigin="anonymous"></script>
-    <!-- Szalaghirdetés -->
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-2657039667172408"
-        data-ad-slot="8313107461"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
     </main>
     <footer>
     </footer>
     <script src="../js/all.js"></script>
+    <script src="../js/other.js"></script>
     <script src="tz-osszefoglalok.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="pntrmln" data-description="Support me on Buy me a coffee!" data-message="" data-color="#464646" data-position="Right" data-x_margin="30" data-y_margin="100"></script> -->
 </body>
 </html>
