--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="tz-osszefoglalok.css">
     <style>#mh1{margin-top: 15vh;}</style>
 </head>
-<body onload="checkSettings()">
+<body onload="window.location.href='construction.html'">
     <nav class="navbar">
     </nav>
     <main>
@@ -34,4 +34,5 @@
     <script src="../js/other.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
+
 </html>
